<resources>
    <string name="app_name">Promobit Contatos</string>
    <string name="navigation_drawer_open">Abre a tela inicial</string>
    <string name="navigation_drawer_close">Fecha a tela inicial</string>
    <string name="nav_header_title">Armando Marques Sobrinho</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navegador do app</string>
    <string name="action_settings">Configurações</string>

    <string name="menu_contacts">Meus Contatos</string>
    <string name="menu_cards">Meus Cartões</string>
    <string name="action_ftudo">Mostrar Todos</string>
    <string name="action_com_foto">Mostrar com Foto</string>
    <string name="action_natoz">Nomes A-Z</string>
    <string name="action_nztoa">Nomes Z-A</string>
    <string name="action_cztoa">Company Z-A</string>
    <string name="action_catoz">Company A-Z</string>
</resources>